--- a/NotesTaking/MainWindow.xaml
+++ b/NotesTaking/MainWindow.xaml
@@ -33,12 +33,12 @@
             </Rectangle>
             <Grid Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" MouseLeftButtonDown="btnClose_MouseLeftButtonDown" MouseEnter="btnClose_MouseEnter" MouseLeave="btnClose_MouseLeave">
                 <Ellipse x:Name="btnClose" Margin="0,0,10,0" Fill="#FF343A" StrokeThickness="4" Stroke="#C7282D" Height="30" Width="30"/>
-                <Image Source="C:\Users\chris\source\repos\NotesTaking\NotesTaking\Images\icons8-close-24.png" Width="20" Height="20" Stretch="Uniform" Margin="5,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <Image Source="Images\icons8-close-24.png" Width="20" Height="20" Stretch="Uniform" Margin="5,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
             </Grid>
 
             <Grid Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" MouseLeftButtonDown="btnMinimize_MouseLeftButtonDown" MouseEnter="btnMinimize_MouseEnter" MouseLeave="btnMinimize_MouseLeave">
                 <Ellipse x:Name="btnMinimize" Margin="0,0,45,0" Fill="#FFBE45" StrokeThickness="4" Stroke="#C79436" Height="30" Width="30"/>
-                <Image Source="C:\Users\chris\source\repos\NotesTaking\NotesTaking\Images\icons8-minimize-24.png" Width="20" Height="20" Stretch="Uniform" Margin="5,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                <Image Source="Images\icons8-minimize-24.png" Width="20" Height="20" Stretch="Uniform" Margin="5,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left"/>
             </Grid>
 
             <Image Margin="110,37,110,328" Source="Images\LogInLogo.png" Grid.Column="1" Grid.Row="1"/>
