Datetime done, although it has minor bug

--- a/NotesTaking/MVVM/View/NotePopupWindow.xaml
+++ b/NotesTaking/MVVM/View/NotePopupWindow.xaml
@@ -20,6 +20,9 @@
                 <!-- Editable Title TextBox -->
                 <TextBox Grid.Row="0" Text="{Binding NoteTitle, UpdateSourceTrigger=PropertyChanged}" FontWeight="Bold" BorderThickness="0" Background="White" Margin="5,0,5,5" VerticalAlignment="Bottom" />
 
+                <!-- Timestamp TextBlock -->
+                <TextBlock Grid.Row="0" Text="{Binding NoteDate, StringFormat='{}{0:MM/dd/yyyy HH:mm}'}" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5,0" FontSize="12" Foreground="Gray"/>
+
                 <!-- Editable Note Content TextBox with ScrollViewer -->
                 <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="0,0,0,23">
                     <TextBox Text="{Binding NoteContent, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" BorderThickness="0" Background="white" Margin="5" AcceptsReturn="True"/>
